2010-05-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclPkg.c    Unnecessary type casts, See Tcl [Patch #2997087]

2010-05-04  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinNotify.c    TCHAR-related fixes, making those two
	* win/tclWinSock.c      files compile fine when TCHAR != char
	Please see comments in [Freq 2965056] (2965056-1.patch).

2010-05-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclIORChan.c    Use "tclIO.h" and "tclTomMathDecls.h"
	* generic/tclIORTrans.c   everywhere
	* generic/tclTomMath.h
	* tools/fix_tommath_h.tcl
	* libtommath/tommath.h    Formatting (# should always be first char on line)
	* win/tclAppInit.c        For MINGW/CYGWIN, use GetCommandLineA explicitely
	* unix/.cvsignore         Add pkg, *.dll

	* libtommath/tommath.h        CONSTify various useful internal functions
	* libtommath/bn_mp_cmp_d.c    (TclBignumToDouble, TclCeil, TclFloor), and
	* libtommath/bn_mp_cmp_mag.c  related tommath functions.
	* libtommath/bn_mp_cmp.c
	* libtommath/bn_mp_copy.c
	* libtommath/bn_mp_count_bits.c
	* libtommath/bn_mp_div_2d.c
	* libtommath/bn_mp_mod_2d.c
	* libtommath/bn_mp_mul_2d.c
	* libtommath/bn_mp_neg.c
	* generic/tclBasic.c         Handle TODO: const correctness ?
	* generic/tclInt.h
	* generic/tclStrToD.c
	* generic/tclTomMath.decls
	* generic/tclTomMath.h
	* generic/tclTomMathDecls.h

2010-04-30  Don Porter  <dgp@users.sourceforge.net>

	* generic/tcl.h:	Bump patchlevel to 8.6b1.2 to distinguish
	* library/init.tcl:	CVS snapshots from earlier snapshots as well
	* unix/configure.in:	as the 8.6b1 and 8.6b2 releases.
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* generic/tclBinary.c (TclAppendBytesToByteArray):	Add comments
	* generic/tclInt.h (TclAppendBytesToByteArray):	placing overflow
	protection responsibility on caller.  Convert "len" argument to signed
	int which any value already vetted for overflow issues will fit into.